WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
149523
[WinCairo] NULL pointer crash when trying to use tiled backing for frame view.
https://bugs.webkit.org/show_bug.cgi?id=149523
Summary
[WinCairo] NULL pointer crash when trying to use tiled backing for frame view.
peavo
Reported
2015-09-24 07:45:47 PDT
Disable tiled backing for frame view, it seems WinCairo is not ready for it yet :)
Attachments
Patch
(1.25 KB, patch)
2015-09-24 07:49 PDT
,
peavo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2015-09-24 07:49:51 PDT
Created
attachment 261868
[details]
Patch
Brent Fulgham
Comment 2
2015-09-24 09:16:34 PDT
Comment on
attachment 261868
[details]
Patch r=me
peavo
Comment 3
2015-09-24 09:31:09 PDT
(In reply to
comment #2
)
> Comment on
attachment 261868
[details]
> Patch > > r=me
Thanks!
WebKit Commit Bot
Comment 4
2015-09-24 10:01:20 PDT
Comment on
attachment 261868
[details]
Patch Clearing flags on attachment: 261868 Committed
r190207
: <
http://trac.webkit.org/changeset/190207
>
WebKit Commit Bot
Comment 5
2015-09-24 10:01:25 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug