[WinCairo] NULL pointer crash when trying to use tiled backing for frame view. https://bugs.webkit.org/show_bug.cgi?id=149523

Reviewed by Brent Fulgham.

For WinCairo, disable tiled backing for frame view.

* WebCoreSupport/WebChromeClient.cpp:
(WebChromeClient::shouldUseTiledBackingForFrameView):


Canonical link: https://commits.webkit.org/167630@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190207 268f45cc-cd09-0410-ab3c-d52691b4dbfc